--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,9 @@
             android:name=".activities.TextDemoActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.DropDownMenuDemoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
