--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -60,6 +62,9 @@
             android:exported="false" />
         <activity
             android:name=".activities.composable.LazyColumnDemoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.composable.BasicLazyColumnDemoActivity"
             android:exported="false" />
         <activity
             android:name=".activities.composable.LazyRowDemoActivity"
