--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ activity = "1.10.1"
 constraintlayout = "1.1.1"
 glide = "1.0.0-alpha.1"
 paging = "3.3.6"
+constraintlayoutVersion = "2.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout" }
 glide-compose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glide" }
 pagination-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayoutVersion" }
 
 
 [plugins]
