--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeApplicationTheme"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".services.activities.BackgroundServiceDemoActivity"
             android:exported="false" />
@@ -32,7 +32,10 @@
             android:name=".services.activities.ServiceMenuActivity"
             android:exported="false" />
         <activity
-            android:name=".statemanagement.activities.StateManagementDemoActivity"
+            android:name=".stateManagements.activities.StateManagementDemoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".stateManagements.activities.StateManagementOnTextFieldDemoActivity"
             android:exported="false" />
         <activity
             android:name=".composable.activities.ComposableMenuActivity"
@@ -151,7 +154,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HomeApplicationTheme" >
+            android:theme="@style/Theme.HomeApplicationTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
