--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.HomeApplicationTheme"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.navigationDemo.NavigationDemoActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.networkCall.NetworkCallDemoActivity"
             android:exported="false" />
         <activity
