--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:theme="@style/Theme.HomeApplicationTheme"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.ui.navigationDemo.NavigationDemoActivity"
+            android:name=".presentation.ui.activityLifecycle.ActivityLifecycleInComposeDemo"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.navigationDemo.NavigationWithObjectArgumentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.navigationDemo.NavigationWithStringArgumentActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.ui.networkCall.NetworkCallDemoActivity"
