--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.34.0"
 agp = "8.7.3"
 converterGson = "2.9.0"
 gson = "2.10.1"
@@ -23,6 +24,7 @@ glide = "1.0.0-alpha.1"
 navigationCompose = "2.9.0"
 paging = "3.3.6"
 constraintlayoutVersion = "2.2.1"
+playServicesLocation = "21.3.0"
 retrofit = "2.9.0"
 composeLiveData = "1.8.3"
 # Do not update room version. Wasted 12 hours to fix the gradle issue.
@@ -32,6 +34,7 @@ androidComposeTooling = "1.6.7"
 
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
@@ -67,6 +70,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 glide-compose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glide" }
 pagination-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayoutVersion" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeLiveData" }
 
