Changes made for adding security in the project.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ composeLiveData = "1.8.3"
 #noinspection GradleDependency
 roomKtx = "2.6.1"
 androidComposeTooling = "1.6.7"
+securityCryptoKtx = "1.0.0"
 
 
 [libraries]
@@ -73,6 +74,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeLiveData" }
+androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
 
 
 [plugins]
