--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED" />
+
 
     <application
         android:name=".app.MyApplication"
@@ -18,6 +24,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeApplicationTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".presentation.ui.permissionsDemo.CameraAndStoragePermissionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.permissionsDemo.PermissionsMenuActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.security.EncryptionDemoActivity"
             android:exported="false" />
