--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,8 @@ composeLiveData = "1.8.3"
 roomKtx = "2.6.1"
 androidComposeTooling = "1.6.7"
 securityCryptoKtx = "1.0.0"
+mockitoCore = "5.18.0"
+truth = "1.4.4"
 
 
 [libraries]
@@ -75,7 +77,8 @@ play-services-location = { module = "com.google.android.gms:play-services-locati
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeLiveData" }
 androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
-
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+truth = { module = "com.google.truth:truth", version.ref = "truth" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
