--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         android:theme="@style/Theme.HomeApplicationTheme"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.jayantTutorial.JTutorialPart6Activity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.jayantTutorial.JTutorialPart5Activity"
             android:exported="false" />
         <activity
